correct footer tag text & add z-index

--- a/src/css/img-slider.css
+++ b/src/css/img-slider.css
@@ -48,7 +48,7 @@
     letter-spacing: 0.0125em;
     text-align: left;
     margin-bottom: 30px;
-
+    z-index: 1000;
 }
 
 .slider-subtext {
@@ -59,6 +59,5 @@
     line-height: 24px;
     letter-spacing: 0.0125em;
     text-align: left;
-    /* width: 248px;
-    height: 96px; */
+    z-index: 1000;
 }
